--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+server.port=8080
 
 spring.mvc.static-path-pattern=/static/**
 
@@ -9,9 +9,20 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.html
 spring.freemarker.settings.template_exception_handler=com.zacharye.book.exception.FreemarkerExceptionHandler
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://www.zacharye.top:3306/zachary?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=Zacharye
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://www.zacharye.top:3306/zachary?useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=Zacharye
+#
+#mybatis.mapper-locations=classpath:mappers/*.xml
+#master database
+master.datasource.driver-class-name=com.mysql.jdbc.Driver
+master.datasource.url=jdbc:mysql://www.zacharye.top:3306/zachary?useUnicode=true&characterEncoding=utf8
+master.datasource.username=root
+master.datasource.password=Zacharye
 
-mybatis.mapper-locations=classpath:mappers/*.xml
+#cluster database
+cluster.datasource.driver-class-name=com.mysql.jdbc.Driver
+cluster.datasource.url=jdbc:mysql://www.zacharye.top:3306/wxapp?useUnicode=true&characterEncoding=utf8
+cluster.datasource.username=root
+cluster.datasource.password=Zacharye
